feat: :sparkles: Editing, persistent current document, saving

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="styles/script.css">
 	<link rel="stylesheet" href="styles/table.css">
 
+	<script src="./scripts/data/story_data.js"></script>
 	<script src="./scripts/tree_renderer.js"></script>
 	<script src="./scripts/chapter_renderer.js"></script>
 </head>
