feat: table renderer, selected scene preserving

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 	<link rel="stylesheet" href="styles/script.css">
 	<link rel="stylesheet" href="styles/table.css">
 
+	<script src="./scripts/data/action_parser.js"></script>
 	<script src="./scripts/data/story_data.js"></script>
+	
 	<script src="./scripts/tree_renderer.js"></script>
 	<script src="./scripts/chapter_renderer.js"></script>
+	<script src="./scripts/table_renderer.js"></script>
 </head>
 
 <body>
@@ -31,7 +34,7 @@
 	</div>
 
 	<div class="split right script" id="chapter-container">
-		<table id="chapter-table">
+		<table class="chapter-table" id="chapter-table">
 		</table>
 	</div>
 </body>
