feat: Creating new nodes in tree view

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<script src="./scripts/data/action_parser.js"></script>
 	<script src="./scripts/data/story_data.js"></script>
 	
+	<script src="./scripts/renderers/new_node_renderer.js"></script>
 	<script src="./scripts/tree_renderer.js"></script>
 	<script src="./scripts/chapter_renderer.js"></script>
 	<script src="./scripts/table_renderer.js"></script>
