fix: action_renderer include in index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<script src="./scripts/tree_renderer.js"></script>
 	
 	<script src="./scripts/renderers/scene/title_renderer.js"></script>
+	<script src="./scripts/renderers/scene/action_renderer.js"></script>
 	<script src="./scripts/renderers/scene/character_renderer.js"></script>
 	<script src="./scripts/renderers/scene/paragraph_renderer.js"></script>
 	<script src="./scripts/chapter_renderer.js"></script>
