refactor: Started untangling data and controllers

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 	<script src="./scripts/renderers/scene/character_renderer.js"></script>
 	<script src="./scripts/renderers/scene/paragraph_renderer.js"></script>
 	<script src="./scripts/chapter_renderer.js"></script>
-
+	
 	<script src="./scripts/table_renderer.js"></script>
+
+	<script src="./scripts/editor_controller.js"></script>
 </head>
 
 <body>
