feat: Proofreading mode

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 	<link rel="stylesheet" href="styles/svg.css">
 	<link rel="stylesheet" href="styles/script.css">
 	<link rel="stylesheet" href="styles/table.css">
+	<link rel="stylesheet" href="styles/proofreading.css">
 
+	<script src="./scripts/data/line_validator.js"></script>
 	<script src="./scripts/data/action_parser.js"></script>
 	<script src="./scripts/data/story_data.js"></script>
 	
@@ -21,6 +23,7 @@
 	<script src="./scripts/renderers/scene/action_renderer.js"></script>
 	<script src="./scripts/renderers/scene/character_renderer.js"></script>
 	<script src="./scripts/renderers/scene/paragraph_renderer.js"></script>
+	<script src="./scripts/renderers/scene/approve_renderer.js"></script>
 	<script src="./scripts/chapter_renderer.js"></script>
 	
 	<script src="./scripts/table_renderer.js"></script>
