--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 	<script src="./scripts/data/line_validator.js"></script>
 	<script src="./scripts/data/action_parser.js"></script>
+	<script src="./scripts/data/conditions_parser.js"></script>
 	<script src="./scripts/data/story_data.js"></script>
 	
 	<script src="./scripts/renderers/splitter_renderer.js"></script>
@@ -35,7 +36,7 @@
 </head>
 
 <body>
-	<svg style="display: none;">
+	<svg>
 		<defs>
 			<marker id="arrowhead" markerWidth="10" markerHeight="7" refX="0" refY="3.5" orient="auto">
 				<polygon points="0 0, 10 3.5, 0 7" />
