--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<script src="./scripts/windows/tree/renderers/borken_line_renderer.js"></script>
 	<script src="./scripts/windows/tree/renderers/node_id_renderer.js"></script>
 	<script src="./scripts/windows/tree/renderers/new_node_renderer.js"></script>
+	<script src="./scripts/windows/tree/renderers/node_context_renderer.js"></script>
 	<script src="./scripts/windows/tree/builder/collision_reduction_pass.js"></script>
 	<script src="./scripts/tree_renderer.js"></script>
 	
@@ -48,8 +49,8 @@
 		</defs>
 	</svg>
 	
-	<div class="editor">
-		<div class="split left">
+	<div class="editor" id="editor">
+		<div class="split left" id="tree">
 			<svg viewBox="0 0 500 1600" id="canvas">
 			</svg>
 		</div>
