Project loading, project browser, toolbar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 	<link rel="stylesheet" href="styles/svg.css">
 	<link rel="stylesheet" href="styles/script.css">
 	<link rel="stylesheet" href="styles/table.css">
+	<link rel="stylesheet" href="styles/toolbar.css">
 	<link rel="stylesheet" href="styles/proofreading.css">
+	<link rel="stylesheet" href="styles/project-browser.css">
 
 	<script src="./scripts/data/line_validator.js"></script>
 	<script src="./scripts/data/action_parser.js"></script>
@@ -18,6 +20,8 @@
 	<script src="./scripts/data/story_data.js"></script>
 	
 	<script src="./scripts/renderers/splitter_renderer.js"></script>
+	<script src="./scripts/windows/toolbar/toolbar_renderer.js"></script>
+	<script src="./scripts/windows/project/project_renderer.js"></script>
 	
 	<script src="./scripts/windows/tree/renderers/node_renderer.js"></script>
 	<script src="./scripts/windows/tree/renderers/line_renderer.js"></script>
