Various editor improvements and fixes, File menu updated for projects flow

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			</marker>
 		</defs>
 	</svg>
-	
+
 	<div class="editor" id="editor">
 		<div class="split left" id="tree">
 			<svg viewBox="0 0 500 1600" id="canvas">
@@ -60,11 +60,14 @@
 		</div>
 
 		<div class="splitter" id="splitter">
-		</div>		
-
-		<div class="split right script" id="chapter-container">
+		</div>		`
+		
+		<div class="split right">
 			<table class="chapter-table" id="chapter-table">
 			</table>
+		</div>
+
+		<div class="split right script" id="chapter-container">
 		</div>
 	</div>
 
