Undo/Redo stack, ux improvements, action and conditions parsing fixes

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<script src="./scripts/data/conditions_parser.js"></script>
 	<script src="./scripts/data/story_data.js"></script>
 	<script src="./scripts/data/story_helper.js"></script>
+	<script src="./scripts/history/history_controller.js"></script>
 	
 	<script src="./scripts/renderers/splitter_renderer.js"></script>
 	<script src="./scripts/windows/toolbar/tabs_renderer.js"></script>
