--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 	<link rel="stylesheet" href="styles/proofreading.css">
 	<link rel="stylesheet" href="styles/project-browser.css">
 
+	<script src="./scripts/localisation/localisation.js"></script>
+
 	<script src="./scripts/data/line_validator.js"></script>
 	<script src="./scripts/data/action_parser.js"></script>
 	<script src="./scripts/data/conditions_parser.js"></script>
