[1.0.1] : Table column creation, editting, deletion. Column ordering. Improved id format for new scenes. Added static clases and objects to the linter

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 	<script src="./scripts/windows/script/context_menu_renderer.js"></script>
 	<script src="./scripts/chapter_renderer.js"></script>
 	
+	<script src="./scripts/windows/table/column_header_renderer.js"></script>
 	<script src="./scripts/windows/table/cell_renderer.js"></script>
 	<script src="./scripts/table_renderer.js"></script>
 
